[metadata]
name = django_cabinet
version = attr: cabinet.__version__
description = Media library for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/matthiask/django-cabinet/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    django-imagefield
    django-tree-queries
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude = tests

[flake8]
exclude = venv,build,docs,.tox,migrations
max-complexity = 10
max-line-length = 88

[bdist_wheel]
universal = 1

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2

[coverage:run]
branch = True
include =
    *cabinet*
omit =
    *migrations*
    *tests*
    *.tox*
