[metadata]
name = django_cabinet
version = attr: cabinet.__version__
description = Media library for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/matthiask/django-cabinet/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django>=3.2
    django-imagefield
    django-tree-queries
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude = tests

[coverage:run]
branch = True
include =
    *cabinet*
omit =
    *migrations*
    *tests*
    *.tox*
